Got the button to add graphs working. Need to fix the spacing of the divs. Next need to figure out the charts and get the buttons formatted.

--- a/style.css
+++ b/style.css
@@ -12,12 +12,13 @@ html, body {
 #leftCol {
     width: 30%;
 }
-#menu {
-    width:100px;
+#controls {
+    width:30%;
 }
 
 #graphHolder {    
     width:70%;
+    height:100%;
  }
 
 #downloadButton{
